compiler-core/src/type_/snapshots/gleam_core__type___tests__record_update_unlabelled_fields.snap
---
source: compiler-core/src/type_/tests.rs
expression: "\n        pub type Pair {\n            Pair(Int, String)\n        }\n\n        pub fn wibble(p: Pair) {\n            Pair(..p, a: 20)\n        }"
---
----- SOURCE CODE

        pub type Pair {
            Pair(Int, String)
        }

        pub fn wibble(p: Pair) {
            Pair(..p, a: 20)
        }

----- ERROR
error: Invalid record update
  ┌─ /src/one/two.gleam:7:13
  │
7 │             Pair(..p, a: 20)
  │             ^^^^ This constructor has no labelled fields

Only constructors with labelled fields can be used with the update syntax.
