compiler-core/src/type_/snapshots/gleam_core__type___tests__string_concat_ko_2.snap
---
source: compiler-core/src/type_/tests.rs
expression: " 1 <> \"2\" "
---
----- SOURCE CODE
 1 <> "2" 

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:2
  │
1 │  1 <> "2" 
  │  ^

The <> operator expects arguments of this type:

    String

But this argument has this type:

    Int
